[package]
name = "misc-precompiled-circuit"
authors = ["xgao@zoyoe.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[dependencies]
strum = "0.25"
strum_macros = "0.25"
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
halo2-gate-generator = { git = "https://github.com/scroll-tech/halo2gategen.git", tag = "legacy" }
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
subtle = "2.4"
